# enlightened-broccoli

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  docker-compose.yml
.github/workflows/: black.yml  krypto.yml
alembic/: env.py
alembic/versions/: 04d4615b5139_created_entry_table_and_related_.py  3b3c7e99d5d3_recreating_entries_table.py  708171308c9c_added_goal_attribute_to_user_model.py  db39229f922f_adding_primary_key_to_association_table.py
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/versions/: 13b49f1e7bbf_.py  4ad927fcb20f_adding_primary_key_to_association_table.py  a37a05d793cc_added_personal_details_for_users.py  c2bf2dba90ac_goal_attribute_string.py  c4329d1e6f48_added_created_at_column.py  d6a6a542ab84_.py  e28ca79033e2_added_calories_column_to_items.py
backend/broccoli/: __init__.py  app.py  db.py  models.py  operations.py  schemas.py  security.py
backend/broccoli/routers/: contact.py  entries.py  items.py  users.py
backend/tests/: conftest.py  test_app.py  test_creation.py  test_deletion.py  test_entries.py  test_items.py  test_users.py
broccoli/: Dockerfile  README.md  package-lock.json  package.json
broccoli/public/: index.html
broccoli/src/: App.js  index.css  index.js  store.js
broccoli/src/Actions/: contact.js  entriesSlice.js  itemsSlice.js  userSlice.js
broccoli/src/Components/: About.js  AddFoodItem.js  Contact.js  Footer.js  Header.js  Home.js  LogIn.js  NavBar.js  Profile.js  ProtectedRoute.js  Signup.js  Stats.js  StyledComponents.js
broccoli/src/Components/Calendar/: Heatmap.js  Months.js  Svg.js  Weekdays.js  index.js
broccoli/src/Components/Entries/: AutocompleteItem.js  CreateItem.js  Entries.js  Entry.js  EntryCreate.js  EntryDetails.js  EntryLink.js  EntryList.js  EntryListItem.js  Timeline.js  TimelineElement.js  index.js
broccoli/src/Components/Home/: Home.js  IconHelper.js
broccoli/src/Components/HomePage/: WelcomePage.js  index.js
broccoli/src/Components/Profile/: Profile.js  Statistic.js  index.js
broccoli/src/Components/Signup/: Signup.js  SignupComponents.js  index.js
broccoli/src/Components/utils/: index.js
broccoli/src/utils/: index.js
frontend/: README.md  package.json
