[tool.poetry]
name = "enlightened-broccoli"
version = "0.1.0"
description = "Backend for Enlightened-Broccoli, a calorie and macronutrient tracking app"
authors = ["antoniouaa <antoniouaa@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
